--- a/style.css
+++ b/style.css
@@ -62,18 +62,17 @@ a {
 }
 
 .fullscreenlink {
-	margin-bottom: 100px;
-	margin-left: auto;
-	margin-right: 10px;
-	right: 0;
-	font-family: Arial, Helvetica, sans-serif;
-	padding: 10px;
-	background: black;
-	border-radius: 10px 0 10px 3px;
-	box-shadow: -5px 5px 3px rgba(0, 0, 0, 0.2);
-	text-decoration: none;
-	color: white;
-	width: fit-content;
+margin-bottom: 100px;
+    margin-left: auto;
+    z-index: 1;
+    font-size: 16px;
+    padding: 10px;
+    background: black;
+    border-radius: 10px 0 10px 3px;
+    box-shadow: -5px 5px 3px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    color: white;
+    width: fit-content;
 }
 
 iframe {
