changed css styling startpage

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
 }
 
 h2 {
+	text-align: center;
 	font-weight: 600;
 	font-size: 3rem;
 	line-height: 1.1;
@@ -62,6 +63,7 @@ a {
 }
 
 .intro {
+	text-align: center;
 	font-size: 1.1rem;
 	line-height: 1.6;
 	font-weight: 300;
@@ -70,9 +72,10 @@ a {
 	margin-bottom: 4rem;
 }
 
-.intro p {
+.split {
+	text-align: left;
 	columns: 2;
-    	column-gap: 3rem;
+	column-gap: 3rem;
 	column-rule: solid 1px red;
 }
 
