--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 	margin: 0 5%;
 	background: radial-gradient(rgb(236, 244, 251), rgb(243, 243, 243));
 	background-attachment: fixed;
+	margin-bottom: 100px;
 }
 .logo {
 	margin: 0 auto;
@@ -94,7 +95,8 @@ a {
 }
 
 iframe {
-	height: 500px;
+	height: 600px;
+	border: 0;
 	box-shadow: -11px 17px 39px rgba(0, 0, 0, 0.6);
 	width: 100%;
 }
