--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 html {
 	font-size: 15px;
 	font-family: "Roboto Slab", display;
+	text-align: center;
 }
 
 img {
@@ -30,20 +31,52 @@ body {
 
 .logo {
 	margin: 0 auto;
-	width: 100px;
+	width: 80px;
 	padding-top: 20px;
 }
 
-h2 {
+h1 {
 	text-align: center;
+	break-after: avoid-column;
 	font-weight: 600;
-	font-size: 3rem;
-	line-height: 1.1;
+	font-size: 2.5rem;
+	line-height: 1.3;
 	color: rgba(218, 36, 39, 1);
 }
 
-h2 > span {
+h2,
+h3 {
+	line-height: 1.4;
+}
+
+h1 > span {
 	color: black;
+}
+
+h2 {
+	font-size: 2rem;
+	color: rgba(218, 36, 39, 1);
+}
+
+h3 {
+	font-size: 1.2rem;
+	color: rgba(218, 36, 39, 1);
+	margin-bottom: 0.5rem;
+}
+
+.split p {
+	break-before: column;
+}
+
+/* .split p {
+	break-inside: avoid;
+} */
+
+.highlights {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 4rem;
+	text-align: left;
 }
 
 .social {
@@ -123,5 +156,14 @@ iframe {
 @media (max-width: 510px) {
 	iframe {
 		height: 900px;
+	}
+}
+
+@media (max-width: 700px) {
+	.split {
+		columns: 1;
+	}
+	.highlights {
+		grid-template-columns: 1fr;
 	}
 }
