--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ a {
 .repo--js {
 	display: grid;
 	gap: 0;
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 	/* grid-template-columns: 1fr 1fr 1fr; */
 }
 
