--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ li:first-of-type {
 	line-height: 1.3;
 }
 
+li:first-of-type a {
+	text-decoration:none
+}
+
 li:nth-of-type(3),
 li:nth-of-type(4) {
 	font-weight: bold;
