--- a/style.css
+++ b/style.css
@@ -56,10 +56,12 @@ a {
 iframe {
 	width:100%;
 	height:300px;
+	{
 
 iframe body {
 zoom:50%
 }
+		
 .project {
 	background: white;
 	padding: 3rem 3rem;
