--- a/style.css
+++ b/style.css
@@ -79,17 +79,18 @@ zoom:50%
 	padding: 3rem 3rem;
 	margin: 0;
 }
-.project:nth-of-type(4),
-.project:nth-of-type(17), 
-.project:nth-of-type(18), 
-.project:nth-of-type(19), 
-.project:nth-of-type(20), 
-.project:nth-of-type(21), 
-.project:nth-of-type(22), 
+.project:nth-of-type(1),
+.project:nth-of-type(2), 
+.project:nth-of-type(10), 
 .project:nth-of-type(23), 
 .project:nth-of-type(24), 
 .project:nth-of-type(25), 
-.project:nth-of-type(26) {
+.project:nth-of-type(26), 
+.project:nth-of-type(27),  
+.project:nth-of-type(28), 
+.project:nth-of-type(29),
+.project:nth-of-type(30)  
+{
     display: none !important;
 }
 
