--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 	font-size: 14px;
 	font-family: "Roboto Slab", sans-serif;
 	line-height: 1.5;
+	background: #dddddd;
 }
 
 h1 {
@@ -50,46 +51,50 @@ a {
 	display: grid;
 	gap: 0;
 	/* grid-template-columns: repeat(auto-fill, minmax(600px, 1fr)); */
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr ;
 }
 
 @media (max-width:1300px) {
+.repo--js {
+	grid-template-columns: 1fr 1fr 1fr;
+}
+}
+
+@media (max-width:1000px) {
 .repo--js {
 	grid-template-columns: 1fr 1fr;
 }
 }
 
-@media (max-width:600px) {
+@media (max-width:800px) {
 .repo--js {
 	grid-template-columns: 1fr;
 }
 }
 
 iframe {
-	width:100%;
+	border: none;
+	background: white;
+	box-shadow: 10px 10px 35px #00000054;
+	width: 100%;
 	height:300px;
 }
 
-iframe body {
-zoom:50%
-	}
+
 		
 .project {
-	background: white;
+	/* background: white; */
 	padding: 3rem 3rem;
 	margin: 0;
 }
-.project:nth-of-type(1),
-.project:nth-of-type(2), 
-.project:nth-of-type(10), 
-.project:nth-of-type(23), 
-.project:nth-of-type(24), 
-.project:nth-of-type(25), 
-.project:nth-of-type(26), 
-.project:nth-of-type(27),  
-.project:nth-of-type(28), 
-.project:nth-of-type(29),
-.project:nth-of-type(30)  
+
+#VS-Code-Quick-Tips-and-Tricks-PDF,
+#json-templates,
+#davidvandenbor,
+#playgrounds,
+#mini2,
+#Twig-Gulp-Foundation-starterkit-for-prototyping,
+#Twig-Gulp-Bower-LibSass-Foundation-Starterkit
 {
     display: none !important;
 }
@@ -105,10 +110,11 @@ li:first-of-type {
 	font-weight: 600;
 	margin-bottom: 0.5rem;
 	line-height: 1.3;
+	margin-top: 1rem;
 }
 
 li:first-of-type a {
-	text-decoration:none
+	text-decoration:none;
 }
 
 li:nth-of-type(3),
