--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ html {
 	font-size: 14px;
 	font-family: "Roboto Slab", sans-serif;
 	line-height: 1.5;
-	background: radial-gradient(rgb(255, 255, 255), rgb(229 222 222));
+	/* background: radial-gradient(rgb(255, 255, 255), rgb(222, 227, 229)); */
 }
 
 h1 {
+	color: var(--huisstijlkleur);
 	font-size: 2rem;
 	line-height: 1.3;
 	margin-bottom: 1rem;
@@ -40,49 +41,60 @@ a {
 	font-weight: bold;
 	text-transform: uppercase;
 	grid-column-start: 2;
+	background: rgb(189, 218, 238);
+	padding: 10px 30px 25px 30px;
+	color: var(--huisstijlkleur);
+	width: fit-content;
 }
 .search-function input {
 	margin-left: 1rem;
 	margin-top: 1rem;
 	padding: 0.5rem;
+	border: none;
 }
 
 .repo--js {
 	display: grid;
+	padding: 0 5vw;
 	gap: 0;
 	/* grid-template-columns: repeat(auto-fill, minmax(600px, 1fr)); */
-	grid-template-columns: 1fr 1fr 1fr 1fr ;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-@media (max-width:1300px) {
-.repo--js {
-	grid-template-columns: 1fr 1fr 1fr;
-}
-}
-
-@media (max-width:1000px) {
-.repo--js {
-	grid-template-columns: 1fr 1fr;
-}
+@media (max-width: 1300px) {
+	.repo--js {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
 }
 
-@media (max-width:800px) {
-.repo--js {
-	grid-template-columns: 1fr;
+@media (max-width: 1000px) {
+	.repo--js {
+		grid-template-columns: 1fr 1fr;
+	}
 }
+
+@media (max-width: 800px) {
+	.repo--js {
+		grid-template-columns: 1fr;
+	}
 }
 
 iframe {
 	border: none;
-	border-radius: 70px 0 0 0;
 	background: white;
 	box-shadow: 10px 10px 35px #00000054;
 	width: 100%;
-	height:300px;
+	height: 300px;
 }
 
+ul:nth-child(odd) {
+	transform: rotate(2deg);
+}
 
-		
+ul:nth-child(even) {
+	transform: rotate(-2deg);
+}
+
 .project {
 	/* background: white; */
 	padding: 3rem 3rem;
@@ -95,9 +107,8 @@ iframe {
 #playgrounds,
 #mini2,
 #Twig-Gulp-Foundation-starterkit-for-prototyping,
-#Twig-Gulp-Bower-LibSass-Foundation-Starterkit
-{
-    display: none !important;
+#Twig-Gulp-Bower-LibSass-Foundation-Starterkit {
+	display: none !important;
 }
 
 li {
@@ -115,7 +126,7 @@ li:first-of-type {
 }
 
 li:first-of-type a {
-	text-decoration:none;
+	text-decoration: none;
 }
 
 li:nth-of-type(3),
