--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ ul:nth-child(even) {
 #json-templates,
 #davidvandenbor,
 #playgrounds,
+#snippets,
 #mini2,
 #Twig-Gulp-Foundation-starterkit-for-prototyping,
 #Twig-Gulp-Bower-LibSass-Foundation-Starterkit {
